<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uwb_imu_fusion</name>
  <version>1.0.0</version>
  <description>IMU和UWB融合定位功能包，使用ESKF算法进行传感器融合</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 核心依赖 -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- 参数文件支持 -->
  <depend>rcl_yaml_param_parser</depend>

  <!-- Eigen3 库依赖 -->
  <depend>eigen3_cmake_module</depend>
  <depend>libeigen3-dev</depend>

  <!-- 串口通信库 (Linux) -->
  <!-- 注意：Windows上可能需要使用其他串口库 -->
  <depend condition="$ROS_PLATFORM != windows">libserial-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
